# LLM_Zoomcamp-project

./: .dockerignore  .env.example  .gitignore  Cultural_Mood_Tracker.py  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/corpus/: demo_documents.jsonl
data/evaluation/: answer_golden.jsonl  retrieval_golden.jsonl
data/evaluation/results/: llm_evaluation.json  retrieval_evaluation.json
pages/: 1_Monitoring.py  2_Corpus_Pipeline.py
scripts/: ask.py  evaluate_answers.py  evaluate_retrieval.py  ingest.py  inspect_pipeline.py
src/cultural_mood_tracker/: __init__.py  assistant.py  config.py  database.py  dlt_pipeline.py  embeddings.py  evaluation.py  factory.py  generation.py  ingestion.py  models.py  retrieval.py  tmdb_source.py
src/moodlens/: __init__.py  assistant.py  chunking.py  config.py  dlt_pipeline.py  embeddings.py  factory.py  generation.py  ingestion.py  models.py  sample_data.py  telemetry.py  tmdb.py
tests/: test_assistant.py  test_chunking.py  test_database.py  test_dlt_pipeline.py  test_evaluation.py  test_golden_set.py  test_prompt.py  test_retrieval_strategies.py  test_telemetry.py
