[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "moodlens"
version = "0.1.0"
description = "A local-first RAG assistant for exploring stories and cultural themes"
requires-python = ">=3.12"
dependencies = [
  "dlt[duckdb]==1.29.0",
  "duckdb==1.5.4",
  "groq==1.5.0",
  "numpy==2.4.3",
  "pandas==3.0.3",
  "sentence-transformers==5.6.0",
  "streamlit==1.59.2",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["E402"]
"pages/*.py" = ["E402"]
"scripts/*.py" = ["E402"]
